# gc-voiceinput

./: .gitignore  README.md  claude-voice.sh  pyproject.toml  start.sh  tmux-pane.sh
voiceinput/: audio.py  config.py  hotkey.py  inject.py  main.py  router.py  transcribe.py
