[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voiceinput"
version = "0.1.0"
description = "Voice-to-text input for Claude Code using push-to-talk"
requires-python = ">=3.10"
dependencies = [
    "sounddevice>=0.4.6",
    "numpy>=1.24",
    "evdev>=1.6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
local = ["faster-whisper>=1.0.0"]

[project.scripts]
voiceinput = "voiceinput.main:main"
